5.Kubernetes/Pratiques/ingress/tls/ingress-tls.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
spec:
  tls:
  - hosts:
    - yourdomain.com  # Replace with your domain
    secretName: my-tls-secret
  rules:
  - host: mydomain.local  # Replace with your domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 8082
